<resources>
    <string name="app_name">Harry Potter</string>
    <string name="name_student">Name Student</string>
    <string name="spell">spell</string>
    <string name="description">Description</string>
    <string name="spells">Spells</string>
    <string name="name_staff">Name staff</string>
    <string name="ancestry">Ancestry</string>
    <string name="button_staff">staff</string>
    <string name="name">name</string>
    <string name="year_of_birth">yearOfBirth</string>
    <string name="string_yearofbirth">@string/yearofbirth</string>
    <string name="house">House</string>
    <string name="year_ofbirth">"Year Of Birth"</string>
    <string name="patronus">patronus</string>
    <string name="ancestryy">"Ancestry"</string>
    <string name="yearofbirth">"Year Of Birth"</string>
    <string name="houses">"House"</string>
    <string name="string_patronus">"Patronus"</string>
    <string name="wand">Wand</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>