<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_string_ancestry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ancestryy"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/text_ancestry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ancestry"
        android:layout_margin="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintStart_toEndOf="@id/text_string_ancestry" />
    <TextView
        android:id="@+id/text_string_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearofbirth"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_string_ancestry"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/text_yearbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_of_birth"
        android:layout_margin="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/text_ancestry"
        app:layout_constraintStart_toEndOf="@id/text_string_year" />

    <TextView
        android:id="@+id/text_string_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houses"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_yearbirth"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house"
        android:layout_margin="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/text_string_year"
        app:layout_constraintStart_toEndOf="@id/text_string_house"/>
    <TextView
        android:id="@+id/text_string_patronus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_patronus"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_house"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/text_patronus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patronus"
        android:layout_margin="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/text_string_house"
        app:layout_constraintStart_toEndOf="@id/text_string_patronus"/>



</androidx.constraintlayout.widget.ConstraintLayout>